--- a/framework/laravel/composer.json
+++ b/framework/laravel/composer.json
@@ -23,7 +23,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Joki20\\": "app/"
+            "Joki20\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
