--- a/orm/laravel/Makefile
+++ b/orm/laravel/Makefile
@@ -65,7 +65,7 @@ phpcs: prepare
 	[ ! -f .phpcs.xml ] || $(PHPCS) --standard=.phpcs.xml | tee build/phpcs
 
 phpcbf:
-ifneq ($(wildcard test),)
+ifneq ($(wildcard tests),)
 	- [ ! -f .phpcs.xml ] || $(PHPCBF) --standard=.phpcs.xml
 else
 	- [ ! -f .phpcs.xml ] || $(PHPCBF) --standard=.phpcs.xml src
